--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ fill: currentColor;
   pointer-events: none;
   visibility: hidden;
 }
+/* Modal */
 .backdrop {
   position: fixed;
   top: 0;
@@ -258,9 +259,192 @@ fill: currentColor;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 0;
-    background-color: transparent;
+
+    padding: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: var(--primary-white-color);
     cursor: pointer;
+    color: #000000;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button:focus,
+.modal-button:hover{
+    color: var(--accent-color);
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+
+    width: 100%;
+    
+}
+/* Forma */
+.form-title {
+    margin-bottom: 12px;
+    color: var(--title-color);
+    
+    font-weight: 700;
+    font-size: 20px;
+    letter-spacing: 00.03em;
+    text-align: center;
+
+    display: block;
+}
+
+
+.modal-registr-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.register-form-group{
+    display: flex;
+    flex-direction: column;
+    
+    margin-bottom: 20px;
+    gap: 10px;
+    }
+
+.form-label {
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+}
+
+
+.form-label-text{
+    margin-bottom: 4px;
+
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    text-align: left;
+
+    color: var(--text-color);
+}
+
+
+.form-input {
+    display: block;
+    width: 448px;
+    
+    padding: 11px 0px 11px 12px;
+    padding-left: 42px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+}
+
+
+.form-input:focus,
+.form-input:hover,
+.input-agreement:focus,
+.input-agreement:hover{
+    border: 1px solid var(--accent-color);
+    outline: 1px solid var(--accent-color);
+}
+
+
+.form-svg {
+    position: absolute;
+    bottom: 11px;
+    left: 12px;
+
+    fill: var(--title-color);
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.form-input:focus + .form-svg,
+.form-input:hover + .form-svg
+{
+    fill: var(--accent-color);
+}
+
+
+.modal-comment{
+width: 448x;
+height: 120px;
+padding: 12px 16px;
+
+font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+
+color: rgba(117, 117, 117, 0.5);
+
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+resize: none;
+}
+
+.icon-check{
+    display: block;
+    width: 16px;
+    height: 15px;
+
+    background-image: ;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.input-agreement:checked + .icon-check{
+    background-image: ;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.group-btn{
+    padding: 10px 52px;
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.62;
+    border: 0;
+    border-radius: 4px;
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.form-agreement{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 9px;
+
+    margin-bottom: 30px;
+}
+
+.text-agreement{
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+}
+
+.link-agreement{
+    color: var(--accent-color);
+}
+
+.group-btn:hover,
+.group-btn:focus{
+    cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+     0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12); 
 }
 
 
@@ -586,8 +770,63 @@ margin-bottom: 20px;
   width: 20px;
   height: 20px;
   fill: currentColor;
-   
- }
+    }
+
+    .subscription-conteiner{
+      margin-left: auto;
+  }
+  
+  
+  .subscription-form{
+      display: flex;
+      align-items: center;
+  
+        gap: 12px;
+  }
+  
+  
+  .subscription{
+      display: flex;
+      flex-direction: column;
+  }
+  .subscription-mail{
+  color: var(--primary-white-color)
+  }
+  
+  
+  .subscription-form input {
+      width: 358px;
+      padding: 16px 295px 16px 16px;
+  
+  
+      background-color: transparent;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+      
+      border-radius: 4px;
+  }
+  
+  
+  .btn-subscription{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 10px 28px;
+      border-radius: 4px;
+      gap: 10px;
+      border: 0;
+      width: 200px;
+      height: 50px;
+  
+  
+      font-size: 16px;
+      line-height: 1.6;
+      letter-spacing: 0.06em;
+      font-weight: 700;
+      color: var(--primary-white-color);
+      background-color: var(--accent-color);
+  }
+  
 
 /* portfolio project */
 .filter{
