--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,7 @@ fill: currentColor;
     
     font-weight: 700;
     font-size: 20px;
+    line-height: 1.15;
     letter-spacing: 00.03em;
     text-align: center;
 
@@ -343,6 +344,9 @@ fill: currentColor;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
 }
+.modal-svg{
+  fill: currentColor;
+}
 
 
 .form-input:focus,
@@ -395,13 +399,13 @@ resize: none;
     width: 16px;
     height: 15px;
 
-    background-image: ;
+    background-image: url(../images/icon/Vector.svg);
     background-repeat: no-repeat;
     background-size: contain;
 }
 
 .input-agreement:checked + .icon-check{
-    background-image: ;
+    background-image: url(../images/icon/check.svg);
     background-repeat: no-repeat;
     background-size: contain;
 }
