--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@ fill: currentColor;
     color: var(--accent-color);
 }
 
-.form{
+.form {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -299,9 +299,11 @@ fill: currentColor;
 
 
 .modal-registr-form{
+  padding-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
+   
 }
 
 .register-form-group{
